--- a/experiments/norming_study_one/experiment.html
+++ b/experiments/norming_study_one/experiment.html
@@ -110,25 +110,25 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <td class='likertlabel'>
             1
           </td>
-          <td>
+          <td class='likertlabel'>
             2
           </td>
-          <td>
+          <td class='likertlabel'>
             3
           </td>
-          <td>
+          <td class='likertlabel'>
             4
           </td>
-          <td>
+          <td class='likertlabel'>
             5
           </td>
-          <td>
+          <td class='likertlabel'>
             6
           </td>
-          <td>
+          <td class='likertlabel'>
             7
           </td>
           <td></td>
@@ -138,7 +138,7 @@
           <td></td>
           <td></td>
           <td></td>
-          <td class='unsure'>
+          <td class='likertlabel'>
             unsure
           </td>
           <td></td>
