fixed slide likert label spacing

--- a/experiments/norming_study_one/experiment.html
+++ b/experiments/norming_study_one/experiment.html
@@ -249,7 +249,7 @@
           <td></td>
           <td></td>
           <td></td>
-          <td class='unsure'>
+          <td class='likertlabel'>
             unsure
           </td>
           <td></td>
