updated legal formatting

--- a/experiments/norming_study_one/experiment.html
+++ b/experiments/norming_study_one/experiment.html
@@ -42,7 +42,6 @@
       </p><button id="start_button" type="button">Start experiment</button>
       <p class="left legal">
         <strong><br>
-        <br>
         LEGAL INFORMATION</strong>:<br>
         <br>
         We invite you to participate in a research study on language production and comprehension. Your experimenter will ask you to do a linguistic task such as reading sentences or words, naming pictures or describing scenes, making up sentences of your own, or participating in a simple language game.
@@ -53,8 +52,8 @@
         <br>
         You will be paid for your participation at the posted rate. If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written dataresulting from the study. You may print this form for your records.
         <br>
-        <br>
-        CONTACT INFORMATION:
+        <strong><br>
+        CONTACT INFORMATION</strong>:
         <br>
         <br>
         If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, you should contact the Protocol Director Meghan Sumner at (650)-725-9336.
