updated prolific language in feedback form

--- a/experiments/norming_study_one/experiment.html
+++ b/experiments/norming_study_one/experiment.html
@@ -282,7 +282,7 @@
           Answering these questions is optional, but will help us understand your answers.
         </p>
         <p>
-          Did you read the instructions and do you think you did the HIT correctly?
+          Did you read the instructions and do you think you did the study correctly?
         </p><label><input type="radio" name="assess" value="No">No</label> <label><input type="radio" name="assess" value="Yes">Yes</label> <label><input type="radio" name="assess" value="Confused">I was confused</label>
         <p>
           Gender: <select id="gender">
