--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -32,7 +32,7 @@
     <link href="css/local-style.css" rel="stylesheet" type="text/css"/>
 
     <!-- experiment file -->
-    <script src="js/final_stim_test.js"></script>
+    <script src="js/final_stim_test2.js"></script>
     <script type="text/javascript">
       var CONDITION = 1;
     </script>
