--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -2,34 +2,25 @@
 
 <head>
     <title>Language Learning Experiment</title>
+  </title><!--JS-->
+  <!-- external general utilities -->
+  <script src="shared/js/jquery-1.11.1.min.js"></script>
+  <script src="shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
+  <script src="shared/js/underscore-min.js"></script>
 
-    <!--JS-->
+  <!-- experiment logic -->
+  <script src="shared/js/exp-V2.js"></script>
+  <script src="shared/js/stream-V2.js"></script>
 
-    <!-- external general utilities -->
-    <script src="../_shared/js/jquery-1.11.1.min.js "></script>
-    <script src="../_shared/full-projects/jquery-ui/jquery-ui.min.js"></script>
-    <script src="../_shared/js/underscore-min.js"></script>
-    <!-- if you want to draw stuff: -->
-    <!-- <script src="../_shared/js/raphael-min.js"></script> -->
+  <!-- utilities to submit data to proliferate -->
+  <script src="https://proliferate.alps.science/static/js/proliferate.js"></script>
 
-    <!-- cocolab experiment logic -->
-    <script src="../_shared/js/exp-V2.js"></script>
-    <script src="../_shared/js/stream-V2.js"></script>
-
-    <!-- cocolab general utilities -->
-    <script src="../_shared/js/mmturkey.js "></script>
-    <script src="../_shared/js/browserCheck.js"></script>
-    <script src="../_shared/js/utils.js"></script>
-    <!-- if you want to draw cute creatures (depends on raphael): -->
-    <!-- <script src="../_shared/js/ecosystem.js"></script> -->
-
-    <!-- experiment specific helper functions -->
-    <!-- <script src="js/local-utils.js"></script> -->
-
-    <!--CSS-->
-    <link href="../_shared/full-projects/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css"/>
-    <link href="../_shared/css/cocolab-style.css" rel="stylesheet" type="text/css"/>
-    <link href="css/local-style.css" rel="stylesheet" type="text/css"/>
+  <!-- general utilities -->
+  <script src="shared/js/browserCheck.js"></script>
+  <script src="shared/js/utils.js"></script>
+  <link href="shared/full-projects/jquery-ui/jquery-ui.min.css" rel="stylesheet" type="text/css">
+  <link href="shared/css/cocolab-style.css" rel="stylesheet" type="text/css">
+  <link href="css/local-style.css" rel="stylesheet" type="text/css">
 
     <!-- experiment file -->
     <script src="js/reading_stims.js"></script>
