--- a/experiments/norming_study_one/experiment.html
+++ b/experiments/norming_study_one/experiment.html
@@ -326,6 +326,89 @@
         <p>
           Native language: <input type="text" id="language">
         </p><label>(the language(s) spoken at home when you were a child)</label>
+        <p>Which US political party, if any, do you identify with?</p>
+        <select id="poliparty" name ="poliparty">
+          <label><option value = "Republican">Republican Party</option></label>
+          <label><option value = "Democrat">Democratic Party</option></label>
+          <label><option value = "Other">Other</option></label>
+          <label><option value = "None">I do not identify with any major political party</option></label>
+        </select><br /><br>
+
+          <p>How would you describe your political ideology?</p>
+        <table class="likertscale">
+          <tr>
+            <td>
+              <p id="scale_end_one">
+              Very Progressive
+              </p>
+            </td>
+            <td>
+              <input type="radio" name="number" value="1">
+            </td>
+            <td>
+              <input type="radio" name="number" value="2">
+            </td>
+            <td>
+              <input type="radio" name="number" value="3">
+            </td>
+            <td>
+              <input type="radio" name="number" value="4">
+            </td>
+            <td>
+              <input type="radio" name="number" value="5">
+            </td>
+            <td>
+              <input type="radio" name="number" value="6">
+            </td>
+            <td>
+              <input type="radio" name="number" value="7">
+            </td>
+            <td>
+              <p id="scale_end_two">
+              Very Conservative
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <td>
+              1
+            </td>
+            <td>
+              2
+            </td>
+            <td>
+              3
+            </td>
+            <td>
+              4
+            </td>
+            <td>
+              5
+            </td>
+            <td>
+              6
+            </td>
+            <td>
+              7
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class='likertlabel'>
+              Moderate
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table><br>
+
         <p>
           Do you think the payment was fair?
         </p><select id="fairprice">
@@ -338,6 +421,7 @@
             The payment was fair
           </option>
         </select>
+
         <p>
           Did you enjoy the experiment?
         </p><select id="enjoyment">
@@ -353,6 +437,7 @@
             Better than average experiment
           </option>
         </select>
+        
         <p>
           We would be interested in any comments you have about this experiment. Please type them here:
         </p>
