changed tab name

--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Language Learning Experiment</title>
+    <title>Language Experiment</title>
   </title><!--JS-->
   <!-- external general utilities -->
   <script src="shared/js/jquery-1.11.1.min.js"></script>
