updates to stimuli, gender ideology questionnaire, etc.

--- a/experiments/1_Reading_Neutrality/experiment/experiment.html
+++ b/experiments/1_Reading_Neutrality/experiment/experiment.html
@@ -313,7 +313,7 @@ f
     }
     </script><br>
 
-    <p>Only some types of work are appropriate for both men and women.</p>
+    <p>For many important jobs, it is better to choose men instead of women.</p>
 
     <div class="slidecontainer">
       <p><i>Strongly Disagree</i> <input type="range" min="0" max="100" value="50" class="slider" id="gender_q13"> <i>Strongly Agree</i></p>
